--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings":{
-    "MarigoldDatabase": "Server=(localdb)\\mssqllocaldb;Database=EFProviders.InMemory;Trusted_Connection=True;"
+    "MarigoldDatabase": "Server=localhost\\SQLEXPRESS;Database=Marigold;Trusted_Connection=True;"
   }
 }
